--- a/index.html
+++ b/index.html
@@ -1,44 +1,34 @@
-<!DOCTYPE html>
-<div style="background-color: yellow"> 
-  <svg id="neighborhoods" width="960" height="500"></svg>
-</div>
-<div style="background-color: orange"> 
-  <svg id="abs" width="960" height="500"></svg>
-</div>
-<script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="https://d3js.org/topojson.v3.min.js"></script>
+<!DOCTYPE HTML>
+<html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <title>Barcelona àrees bàsiques de salut</title>
+  </head>
 
-<script>
-const URL_ABS = "https://gist.githubusercontent.com/glippi/90447fabbe5b577f0b1733fc29cd922d/raw/8ec3b9ccf314287b4843c75afa0a1ffca4712682/ABS_2018.json";
-const URL_BARRIOS = "https://gist.githubusercontent.com/glippi/d00b83b70ba7c14aadd69dc23bc98638/raw/a3b27987f8e10363b8011756ea66c80546584470/Barcelona%2520TopoJson"
+  <body>
+    <svg id="abs" width="960" height="500"></svg>
 
-const svg1 = d3.select("#neighborhoods");
-const svg2 = d3.select("#abs");
-const path = d3.geoPath();
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://d3js.org/topojson.v3.min.js"></script>
+    <script>
+      const URL_ABS = "https://gist.githubusercontent.com/glippi/86b8ce8b6db37ab6cacea573440df1b8/raw/45ecc0e8428fb672a133c0af48cd0102a72bb47b/FINAL"
 
-d3
-  .json(URL_BARRIOS)
-  .then(barcelona => {
-    const neighborhoods = barcelona.objects.neighborhoods.geometries;
 
-    svg1
-      .append('path')
-      .attr('d', path(topojson.mesh(barcelona)))
-      .attr('fill', 'none')
-      .attr('stroke', 'black');
-  })
-  .catch(err => console.warn(err));
+      const svg = d3.select("#abs");
+      const path = d3.geoPath();
 
-d3
-  .json(URL_ABS)
-  .then(barcelona => {
-    const abs = barcelona.objects["ABS_2018"].geometries;
+      d3
+        .json(URL_ABS)
+        .then(barcelona => {
+          const abs = barcelona.objects["ABS_2018"].geometries;
 
-    svg2
-      .append('path')
-      .attr('d', path(topojson.mesh(barcelona)))
-      .attr('fill', 'none')
-      .attr('stroke', 'black');
-  })
-  .catch(err => console.warn(err));
-</script>
+          svg
+            .append('path')
+            .attr('d', path(topojson.mesh(barcelona)))
+            .attr('fill', 'none')
+            .attr('stroke', 'black');
+        })
+        .catch(err => console.warn(err));
+    </script>
+  </body>
+</html>
